- thinner edge: hive plot, radial layout - Add new HOC: sample data selector wrapper - Add new HOC: Load data from s3 - update readme: add description and source code links - move storybook/commons folder to utils folder - move randomGraphGenerator to utils folder

--- a/stories/basic-layouts/d3.md
+++ b/stories/basic-layouts/d3.md
@@ -1,3 +1,7 @@
 # d3
 
 Some placeholder
+
+
+## Source
+[stories/basic-layout/stories.js](https://github.com/uber/graph.gl/blob/master/stories/basic-layout/stories.js)
